syntax = "proto3";
package umee.oracle.v1;

import "gogoproto/gogo.proto";
import "umee/oracle/v1/oracle.proto";

option go_package = "github.com/umee-network/umee/v6/x/oracle/types";

option (gogoproto.goproto_getters_all) = false;

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  Params                                params                           = 1 [(gogoproto.nullable) = false];
  repeated FeederDelegation             feeder_delegations               = 2 [(gogoproto.nullable) = false];
  repeated DenomExchangeRate            exchange_rates                   = 3 [(gogoproto.nullable) = false];
  repeated MissCounter                  miss_counters                    = 4 [(gogoproto.nullable) = false];
  repeated AggregateExchangeRatePrevote aggregate_exchange_rate_prevotes = 5 [(gogoproto.nullable) = false];
  repeated AggregateExchangeRateVote    aggregate_exchange_rate_votes    = 6 [(gogoproto.nullable) = false];
  repeated Price                        medians                          = 7 [(gogoproto.nullable) = false];
  repeated Price                        historic_prices                  = 8 [(gogoproto.nullable) = false];
  repeated Price                        medianDeviations                 = 9 [(gogoproto.nullable) = false];
  // Historic Avg Counter params
  AvgCounterParams avg_counter_params = 10 [
    (gogoproto.moretags) = "yaml:\"avg_counter_params\"",
    (gogoproto.nullable) = false
  ];
}

// FeederDelegation is the address for where oracle feeder authority are
// delegated to. By default this struct is only used at genesis to feed in
// default feeder addresses.
message FeederDelegation {
  string feeder_address    = 1;
  string validator_address = 2;
}

// MissCounter defines an miss counter and validator address pair used in
// oracle module's genesis state
message MissCounter {
  string validator_address = 1;
  uint64 miss_counter      = 2;
}

// Price is an instance of a price "stamp"
message Price {
  ExchangeRateTuple exchange_rate_tuple = 1 [
    (gogoproto.nullable) = false
  ];
  uint64 block_num = 2;
}
